feat: env example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-TOKEN_SECRET=
+TOKEN_SECRET=aXr7Phy0TjilYivJo5XQ
 # DATABASE_URL=postgres://root:password@localhost:5432/developer
+DIRECTORY_TYPEORM=src
+EXT=ts
+
+#CONFIG DB
 DATABASE_URL=
-DIRECTORY_TYPEORM=
-EXT=
+
+#CONFIG OPCIONAIS
+DB_DATABASE=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
