feat: adicionado upload da foto de cada usuario cadastrado.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,13 @@ DB_DATABASE=
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
+
+
+#AWS S3
+STORAGE_TYPE=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+AWS_ACCESS_KEY_ID=
+
+#COLOCAR SOMENTE NA HOSPEDAGEM
+APP_URL=
