--- a/package.json
+++ b/package.json
@@ -13,19 +13,28 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.6",
+    "@types/formidable": "^1.2.1",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
+    "@types/multer-s3": "^2.7.9",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.888.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
