--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     
-    
+    "baseUrl": "types",
+
   },
   "include": ["src/**/*"]
 }
